--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -13,12 +13,15 @@
 }
 
 .headerContainer {
+    top: 0;
+    position: sticky;
     min-height: fit-content;
     width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: var(--back);
+    z-index: 1;
 }
 
 .menuItems {
