--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,46 +5,12 @@
     --secondHighlight: #5D2E8C;
 }
 
-.bodyContainer {
-  background-color: var(--text);
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  color: var(--back);
-}
-
-.bodyContainer h1 {
-  margin-top: 100px;
-  font-size: 3rem;
-}
-
 .textContainer {
-  height: fit-content;
-  width: 70%;
-  font-size: 5rem;
+  font-size: 30px;
+  color: #222823;
+  -webkit-mask-image: url(textBackground.gif);
+  mask-image: url(textBackground.gif);
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
 }
 
-.buttonsContainer {
-  width: 30%;
-}
-
-.sectionContainer {
-  width: 100%;
-  height: 100vh;
-}
-
-@media (min-width: 425px) {
-  .bodyContainer{
-    justify-content: center;
-    align-items: center;
-  }
-  .sectionContainer {
-    width: 40%;
-  }
-  .bodyContainer h1 {
-    font-size: 4.5rem;
-  }
-  .textContainer {
-    font-size: 2rem;
-  }
-}
