--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,24 @@ a {
     background: black;
   }
 }
+
+@font-face {
+  font-family: "Roboto";
+  src: url('/fonts/roboto/RobotoMono-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+  
+@font-face {
+  font-family: "Roboto";
+  src: url('/fonts/roboto/RobotoMono-Bold.ttf');
+  font-weight: bold;
+  font-style: normal;
+}
+  
+@font-face {
+  font-family: "Roboto";
+  src: url('/fonts/roboto/RobotoMono-Italic.ttf');
+  font-weight: normal;
+  font-style: italic;
+}
