--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -30,3 +30,17 @@
   touch-action: manipulation;
   margin-top: 25px;
 }
+
+@media (max-width: 2560px) {
+  .form label {
+    font-size: 2rem;
+  }
+  .form input {
+    width: 80%;
+    height: 40px;
+  }
+  .form textarea {
+    width: 80%;
+    height: 100px;
+  }
+}
