Working on about me section, done about me info, working on download resume button

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -10,3 +10,21 @@
 .more {
   display: none;
 }
+
+.readButton {
+  background-color: var(--secondHighlight);
+}
+
+.buttonResume {
+  background-color: var(--secondHighlight);
+}
+
+.buttonSpan {
+  margin-top: 5px;
+  margin-left: 10px;
+  display: inline-block;
+  background-image: url("../public/downloadIcon.png");
+  background-repeat: no-repeat;
+  width: 16px;
+  height: 16px;
+}
