--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,144 +1,130 @@
 .main {
-    --back: #222823;
-    --text: #fffaff;
-    --highlight: #7ae582;
-    --secondHighlight: #5D2E8C;
+  --back: #222823;
+  --text: #fffaff;
+  --highlight: #7ae582;
+  --secondHighlight: #5d2e8c;
 }
 
 .main {
   min-height: 100vh;
-  font-family: 'PressStart2P', sans-serif;
-  color: var(--text);
+  font-family: "PressStart2P", sans-serif;
+  color: var(--secondHighlight);
   background-color: var(--text);
 }
 
 .headerContainer {
-    top: 0;
-    position: sticky;
-    min-height: fit-content;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--back);
-    z-index: 1;
+  top: 0;
+  position: sticky;
+  min-height: fit-content;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--back);
+  z-index: 1;
 }
 
 .menuItems {
-    width: 100%;
-    display: flex;
-    font-size: 0.7rem;
-    justify-content: space-around;
+  width: 100%;
+  display: flex;
+  font-size: 0.7rem;
+  justify-content: space-around;
 }
 
 .selected {
-    color: var(--highlight);
+  color: var(--highlight);
 }
 
 .hamburgerLines {
-    display: none;
+  display: none;
 }
 
 .checkbox {
-    display: none;
+  display: none;
 }
-
 
 @media (max-width: 426px) {
+  .headerContainer {
+    height: 60px;
+  }
 
-    .headerContainer {
-        height: 60px;
-    }
+  .checkbox {
+    position: absolute;
+    display: block;
+    height: 32px;
+    width: 32px;
+    top: 20px;
+    left: 20px;
+    z-index: 5;
+    opacity: 0;
+    cursor: pointer;
+  }
 
-      
-      .checkbox {
-        position: absolute;
-        display: block;
-        height: 32px;
-        width: 32px;
-        top: 20px;
-        left: 20px;
-        z-index: 5;
-        opacity: 0;
-        cursor: pointer;
-      }
-      
-      .hamburgerLines {
-        display: block;
-        height: 26px;
-        width: 32px;
-        position: absolute;
-        top: 17px;
-        left: 20px;
-        z-index: 2;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-      }
-      
-      .hamburgerLines .line {
-        display: block;
-        height: 4px;
-        width: 100%;
-        border-radius: 10px;
-        background: var(--highlight);
-      }
-      
-      .hamburgerLines .line1 {
-        transform-origin: 0% 0%;
-        transition: transform 0.4s ease-in-out;
-      }
-      
-      .hamburgerLines .line2 {
-        transition: transform 0.2s ease-in-out;
-      }
-      
-      .hamburgerLines .line3 {
-        transform-origin: 0% 100%;
-        transition: transform 0.4s ease-in-out;
-      }
-      
-      .headerContainer .menuItems {
-        padding-top: 445px;
-        box-shadow: inset 0 0 2000px #222823;
-        height: 100vh;
-        width: 100%;
-        position: relative;
-        transform: translate(-150%);
-        display: flex;
-        flex-direction: column;
-        transition: transform 0.5s ease-in-out;
-        text-align: center;
-      }
-      
-      .menuItems a {
-        font-size: 1rem;
-        font-weight: 500;
-      }
-      
-      /* .logo {
-        position: absolute;
-        top: 5px;
-        right: 15px;
-        font-size: 1.2rem;
-        color: #0e2431;
-      } */
-      
-      input[type="checkbox"]:checked ~ .menuItems {
-        transform: translateX(0);
-      }
-      
-      input[type="checkbox"]:checked ~ .hamburgerLines .line1 {
-        transform: rotate(45deg);
-      }
-      
-      input[type="checkbox"]:checked ~ .hamburgerLines .line2 {
-        transform: scaleY(0);
-      }
-      
-      input[type="checkbox"]:checked ~ .hamburgerLines .line3 {
-        transform: rotate(-45deg);
-      }
-    
+  .hamburgerLines {
+    display: block;
+    height: 26px;
+    width: 32px;
+    position: absolute;
+    top: 17px;
+    left: 20px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .hamburgerLines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: var(--highlight);
+  }
+
+  .hamburgerLines .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.4s ease-in-out;
+  }
+
+  .hamburgerLines .line2 {
+    transition: transform 0.2s ease-in-out;
+  }
+
+  .hamburgerLines .line3 {
+    transform-origin: 0% 100%;
+    transition: transform 0.4s ease-in-out;
+  }
+
+  .headerContainer .menuItems {
+    padding-top: 445px;
+    box-shadow: inset 0 0 2000px #222823;
+    width: 100%;
+    position: relative;
+    transform: translate(-150%);
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.5s ease-in-out;
+    text-align: center;
+  }
+
+  .menuItems a {
+    font-size: 1rem;
+    font-weight: 500;
+  }
+
+  input[type="checkbox"]:checked ~ .menuItems {
+    transform: translateX(0);
+  }
+
+  input[type="checkbox"]:checked ~ .hamburgerLines .line1 {
+    transform: rotate(45deg);
+  }
+
+  input[type="checkbox"]:checked ~ .hamburgerLines .line2 {
+    transform: scaleY(0);
+  }
+
+  input[type="checkbox"]:checked ~ .hamburgerLines .line3 {
+    transform: rotate(-45deg);
+  }
 }
-
