--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -95,3 +95,14 @@
 .cardButton:disabled {
   cursor: auto;
 }
+
+.card h2 {
+  width: 100%;
+}
+
+@media (max-width: 2560px) {
+  .card {
+    width: 45%;
+    margin: 10px;
+  }
+}
