--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,81 +1,155 @@
-.bodyContainer {
-    --back: #222823;
-    --text: #fffaff;
-    --highlight: #7ae582;
-    --secondHighlight: #5D2E8C;
-    font-family: 'Roboto';
+.main {
+  --backDark: #0f1012;
+  --backLight: #fffaff;
+  --highlight: #7ae582;
+  --text: #5d2e8c;
+  font-family: "Roboto";
+  color: var(--backDark);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
-.textContainer {
+.title {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+}
+
+.title h1 {
   width: 80%;
-  font-size: 45px;
-  color: #222823;  
+  padding-left: 25px;
 }
 
-.maskContainer {
-  background-image: url("/purpleBackground.gif");
-  background-size: cover;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+.titleImage {
+  width: 100%;
 }
 
-.button52 {
+.myImg {
+  width: 125px;
+  height: 125px;
+  line-height: 0;
+  border-width: 3px;
+  border-style: solid;
+  border-color: var(--backDark);
+  border-radius: 5px;
+}
+
+.description {
+  width: 100%;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  font-size: 13px;
+}
+
+.button54 {
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
-  font-weight: 200;
-  letter-spacing: 1px;
-  padding: 13px 20px 13px;
-  outline: 0;
-  border: 1px solid black;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: var(--text);
+  color: var(--backDark);
   cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
+    5px 5px 0px 0px;
   position: relative;
-  background-color: rgba(0, 0, 0, 0);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
 }
 
-.button52:after {
-  content: "";
-  background-color: var(--secondHighlight);
-  width: 100%;
-  z-index: -1;
-  position: absolute;
-  height: 100%;
-  top: 7px;
-  left: 7px;
-  transition: 0.2s;
-}
-
-.button52:hover:after {
-  top: 0px;
-  left: 0px;
+.button54:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
 }
 
 @media (min-width: 768px) {
-  .button52 {
-    padding: 13px 50px 13
+  .main {
+    padding-top: 80px;
   }
-  .textContainer{
-    font-size: 65px;
+  .title {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .titleImage {
+    display: flex;
+    width: 30%;
+    justify-content: flex-end;
+    padding-right: 25px;
+  }
+  .myImg {
+    height: 150px;
+    width: 150px;
+  }
+
+  .title h1 {
+    padding-right: 25px;
+  }
+  .description {
+    width: 80%;
+    padding-top: 40px;
+  }
+  .contact {
+    padding-top: 30px;
+  }
+  .button54 {
+    padding: 0.25em 0.75em;
   }
 }
 
 @media (min-width: 1024px) {
-  .textContainer{
-    font-size: 80px;
+  .main {
+    padding-top: 80px;
+  }
+  .title {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .titleImage {
+    display: flex;
+    width: 30%;
+    justify-content: flex-end;
+    padding-right: 25px;
+  }
+  .myImg {
+    height: 225px;
+    width: 225px;
+  }
+
+  .title h1 {
+    width: 40%;
+    font-size: 35px;
+    padding-right: 25px;
+  }
+  .description {
+    width: 100%;
+    padding-top: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  .contact {
+    padding-top: 30px;
+  }
+  .button54 {
+    padding: 0.25em 0.75em;
   }
 }
 
-
-/* @media (min-width: 1440px) {
-  .textContainer{
-    font-size: 10px;
+@media (min-width: 1024px) {
+  .textContainer {
+    font-size: 80px;
   }
-} */
-
-
-/* @media (min-width: 2560px) {
-  .textContainer{
-    font-size: 200px;
-  }
-} */
+}
