--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,5 +1,5 @@
 .mainContainer {
-  --back: #222823;
+  --back: #0f1012;
   --text: #fffaff;
   --highlight: #7ae582;
   --secondHighlight: #5d2e8c;
@@ -9,18 +9,65 @@
   margin-right: 40px;
 }
 
+.pfp {
+  border-width: 3px;
+  border-style: solid;
+  border-color: var(--backDark);
+  border-radius: 5px;
+}
+
 .more {
   display: none;
 }
 
 .readButton {
+  font-size: 10px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
   background-color: var(--secondHighlight);
+  color: var(--highlight);
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
+    5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.readButton:hover {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
 }
 
 .buttonResume {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
   background-color: var(--secondHighlight);
-  font-size: 1.5rem;
-  margin: 2rem;
+  color: var(--highlight);
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
+    5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.buttonResume:hover {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
 }
 
 .buttonSpan {
@@ -38,6 +85,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  text-align: justify;
 }
 
 .aboutMeContainer h1 {
