--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -12,23 +12,35 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 100vh;
+  height: 65vh;
+  width: 50%;
+  margin: 0 auto;
 }
 
 .buttonContainer {
+  margin-top: 35px;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
-  font-weight: 200;
-  letter-spacing: 1px;
-  padding: 13px 20px 13px;
-  outline: 0;
-  border: 1px solid black;
-  cursor: pointer;
-  position: relative;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
   background-color: var(--secondHighlight);
+  color: var(--highlight);
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
+    5px 5px 0px 0px;
+  position: relative;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  margin-top: 25px;
+}
+
+.buttonContainer:hover {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
 }
 
 @media (max-width: 2560px) {
