--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -93,6 +93,16 @@
   width: 100%;
 }
 
+.mainContainerText {
+  text-align: justify;
+}
+
+.aboutMeContainer p {
+  padding: 25px;
+  margin: 0 auto;
+  width: 70%;
+}
+
 .downloadResumeContainer {
   width: 100%;
   display: flex;
@@ -127,6 +137,12 @@
 .socialsContainer a {
   width: 33%;
   text-align: center;
+}
+
+.hobbiesContainer {
+  width: 80%;
+  text-align: justify;
+  margin: 0 auto;
 }
 
 .hobbiesContainer h1 {
