--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -149,3 +149,9 @@
   text-align: center;
   width: 100%;
 }
+
+.videosContainer {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
+}
