--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -155,3 +155,9 @@
   justify-content: space-between;
   padding: 2rem;
 }
+
+.hobbiesImagesContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
