removed min-height:100vh from .main class in layour.module.css and added that property to mainContainer class

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -6,10 +6,13 @@
 }
 
 .main {
-  min-height: 100vh;
   font-family: "PressStart2P", sans-serif;
   color: var(--text);
   background-color: var(--backLight);
+}
+
+.mainContainer {
+  min-height: 100vh;
 }
 
 .headerContainer {
