--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -17,10 +17,22 @@
   margin: 0 auto;
 }
 
+.label {
+  width: 80%;
+  text-align: left;
+  padding-bottom: 20px;
+  font-size: 24px;
+}
+
+.buttonParentContainer {
+  width: 80%;
+  text-align: left;
+}
+
 .buttonContainer {
   margin-top: 35px;
   font-family: "Open Sans", sans-serif;
-  font-size: 16px;
+  font-size: 24px;
   letter-spacing: 2px;
   text-decoration: none;
   text-transform: uppercase;
