--- a/styles/Posts.module.css
+++ b/styles/Posts.module.css
@@ -15,7 +15,10 @@
 
 .mainContainer p {
   width: 70%;
-  text-align: justify;
   margin: 0 auto;
   line-height: 2rem;
+}
+
+.paragraph {
+  padding-bottom: 34px;
 }
