--- a/styles/Archives.module.css
+++ b/styles/Archives.module.css
@@ -5,12 +5,8 @@
   --text: #5d2e8c;
   font-family: "Roboto";
   color: var(--backDark);
-}
-
-.main h2 {
-  margin-top: 50px;
-  padding: 50px;
-  text-align: justify;
+  width: 50%;
+  margin: 0 auto;
 }
 
 .main h3 {
