--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -75,7 +75,7 @@
 
 .card {
   flex: 1; /* Each card takes 25% of the available space */
-  max-width: calc(50%); /* Adjust margin, e.g., 20px */
+  max-width: calc(100%); /* Adjust margin, e.g., 20px */
   min-width: calc(25%);
   color: var(--back);
   text-align: left;
@@ -93,14 +93,64 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  cursor: pointer;
+}
+
+.card:hover {
+  transform: scale(1.03);
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000; /* Ensure it's on top of everything */
+}
+
+.cardPopUp {
+  background-color: #fff;
+  max-width: 50%;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: left;
 }
 
 /* Media Query for smaller screens, adjust max-width accordingly */
-@media (max-width: 768px) {
+@media (max-width: 426px) {
   .cardsContainer {
     justify-content: center;
   }
   .card {
+    flex: none;
     max-width: calc(100% - 20px); /* For 50% width on smaller screens */
+  }
+
+  .cardPopUp {
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 767px) {
+  .card {
+    flex: none;
+    max-width: calc(50% - 20px); /* For 50% width on smaller screens */
+  }
+}
+
+@media (min-width: 1025px) {
+  .card {
+    flex: none;
+    max-width: calc(25% - 20px); /* For 50% width on smaller screens */
+  }
+
+  .cardsContainer {
+    margin-left: 180px;
   }
 }
