--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -50,6 +50,18 @@
   touch-action: manipulation;
 }
 
+.tag {
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  background-color: var(--secondHighlight);
+  color: var(--highlight);
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  height: fit-content;
+}
+
 .cardButton:hover {
   box-shadow: 0px 0px 0px 0px;
   top: 5px;
@@ -120,6 +132,10 @@
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   text-align: left;
+}
+
+.popUpImage {
+  margin-bottom: 10px;
 }
 
 /* Media Query for smaller screens, adjust max-width accordingly */
