--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -6,6 +6,7 @@
   font-family: "Roboto";
   color: var(--back);
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   width: 70%;
   margin: 0 auto;
@@ -60,6 +61,10 @@
   border: 3px solid;
   padding: 0.25em 0.5em;
   height: fit-content;
+}
+
+.tagsContainer {
+  width: 65%;
 }
 
 .cardButton:hover {
