--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,21 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+:root {
+  --color-primary-accent: #5d2e8c;
+  --color-primary: #222823;
+  --color-background: ##fffaff;
+}
+[data-theme="dark"] {
+  --color-primary-accent: #7ae582;
+  --color-primary: #fff;
+  --color-background: #222823;
+}
+body {
+  background-color: var(--color-background);
+  color: var(--color-primary);
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -15,7 +30,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,25 +38,25 @@ a {
     color: white;
     background: black;
   }
+} */
+
+@font-face {
+  font-family: "Roboto";
+  src: url("/fonts/roboto/RobotoMono-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
   font-family: "Roboto";
-  src: url('/fonts/roboto/RobotoMono-Regular.ttf');
-  font-weight: normal;
-  font-style: normal;
-}
-  
-@font-face {
-  font-family: "Roboto";
-  src: url('/fonts/roboto/RobotoMono-Bold.ttf');
+  src: url("/fonts/roboto/RobotoMono-Bold.ttf");
   font-weight: bold;
   font-style: normal;
 }
-  
+
 @font-face {
   font-family: "Roboto";
-  src: url('/fonts/roboto/RobotoMono-Italic.ttf');
+  src: url("/fonts/roboto/RobotoMono-Italic.ttf");
   font-weight: normal;
   font-style: italic;
 }
