--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -4,7 +4,6 @@
   --highlight: #7ae582;
   --secondHighlight: #5d2e8c;
   font-family: "Roboto";
-  color: var(--back);
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -94,12 +93,10 @@
   flex: 1; /* Each card takes 25% of the available space */
   max-width: calc(100%); /* Adjust margin, e.g., 20px */
   min-width: calc(25%);
-  color: var(--back);
   text-align: left;
   align-items: center;
   margin: 10px;
   padding: 10px;
-  border-color: var(--back);
   border-width: 2px;
   border-style: solid;
   border-radius: 10px;
@@ -131,13 +128,28 @@
 }
 
 .cardPopUp {
-  background-color: #fff;
+  background: var(--text);
   max-width: 50%;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   text-align: left;
 }
+
+.cardPopUpDark {
+  background: var(--back);
+  max-width: 50%;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: left;
+}
+
+/* @media (prefers-color-scheme: dark) {
+  .cardPopUp {
+    background-color: var(--back);
+  }
+} */
 
 .popUpImage {
   margin-bottom: 10px;
