--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,21 +6,6 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-:root {
-  --color-primary-accent: #5d2e8c;
-  --color-primary: #222823;
-  --color-background: ##fffaff;
-}
-[data-theme="dark"] {
-  --color-primary-accent: #7ae582;
-  --color-primary: #fff;
-  --color-background: #222823;
-}
-body {
-  background-color: var(--color-background);
-  color: var(--color-primary);
-}
-
 a {
   color: inherit;
   text-decoration: none;
@@ -30,15 +15,17 @@ a {
   box-sizing: border-box;
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+    background-color: #222823;
   }
   body {
     color: white;
-    background: black;
+    background: #222823;
+    background-color: #222823;
   }
-} */
+}
 
 @font-face {
   font-family: "Roboto";
