fixed button colors on toggle mode

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -46,6 +46,10 @@
     border-color: var(--highlight-secondary);
     background-color: inherit;
   }
+
+  .mainContainerDark .button54 {
+    display: hidden;
+  }
 }
 
 .headerContainer {
