--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -57,8 +57,10 @@
   letter-spacing: 2px;
   text-decoration: none;
   text-transform: uppercase;
-  background-color: var(--secondHighlight);
-  color: var(--highlight);
+  /* background-color: var(--secondHighlight);
+  color: var(--highlight); */
+  background-color: inherit;
+  color: inherit;
   cursor: pointer;
   border: 3px solid;
   padding: 0.25em 0.5em;
@@ -74,16 +76,6 @@
   box-shadow: 0px 0px 0px 0px;
   top: 5px;
   left: 5px;
-}
-
-.buttonSpan {
-  margin-top: 5px;
-  margin-left: 10px;
-  display: inline-block;
-  background-image: url("../public/downloadIcon.png");
-  background-repeat: no-repeat;
-  width: 16px;
-  height: 16px;
 }
 
 .aboutMeContainer {
