--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -54,8 +54,10 @@
   letter-spacing: 2px;
   text-decoration: none;
   text-transform: uppercase;
-  background-color: var(--highlight);
-  color: var(--text);
+  /* background-color: var(--highlight);
+  color: var(--text); */
+  background-color: inherit;
+  color: inherit;
   cursor: pointer;
   border: 3px solid;
   padding: 0.25em 0.5em;
@@ -65,27 +67,6 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-}
-
-@media (prefers-color-scheme: dark) {
-  .button54 {
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    letter-spacing: 2px;
-    text-decoration: none;
-    text-transform: uppercase;
-    background-color: var(--text);
-    color: var(--highlight);
-    cursor: pointer;
-    border: 3px solid;
-    padding: 0.25em 0.5em;
-    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px,
-      4px 4px 0px 0px, 5px 5px 0px 0px;
-    position: relative;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-  }
 }
 
 /* .button54Dark {
@@ -196,3 +177,10 @@
     font-size: 80px;
   }
 }
+
+/* @media (prefers-color-scheme: dark) {
+  .main {
+    --highlight: #5d2e8c;
+    --text: #7ae582;
+  }
+} */
