--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -21,8 +21,10 @@
   letter-spacing: 2px;
   text-decoration: none;
   text-transform: uppercase;
-  background-color: var(--secondHighlight);
-  color: var(--highlight);
+  /* background-color: var(--secondHighlight);
+  color: var(--highlight); */
+  background-color: inherit;
+  color: inherit;
   cursor: pointer;
   border: 3px solid;
   padding: 0.25em 0.5em;
@@ -39,8 +41,10 @@
   font-size: 14px;
   letter-spacing: 2px;
   text-transform: uppercase;
-  background-color: var(--secondHighlight);
-  color: var(--highlight);
+  /* background-color: var(--secondHighlight);
+  color: var(--highlight); */
+  background-color: inherit;
+  color: inherit;
   border: 3px solid;
   padding: 0.25em 0.5em;
   height: fit-content;
@@ -130,7 +134,7 @@
   }
   .card {
     flex: none;
-    max-width: calc(100% - 20px); /* For 50% width on smaller screens */
+    max-width: calc(100%); /* For 50% width on smaller screens */
   }
 
   .cardPopUp {
@@ -154,10 +158,12 @@
 
   .cardPopUp {
     max-width: 100%;
+    height: 100%;
     overflow: scroll;
   }
   .cardPopUpDark {
     max-width: 100%;
+    height: 100%;
     overflow: scroll;
   }
 }
@@ -166,6 +172,14 @@
   .card {
     flex: none;
     max-width: calc(25% - 20px); /* For 50% width on smaller screens */
+  }
+
+  .cardPopUp {
+    width: 70%;
+  }
+
+  .cardPopUpDark {
+    width: 70%;
   }
 
   .cardsContainer {
