--- a/styles/Posts.module.css
+++ b/styles/Posts.module.css
@@ -68,11 +68,13 @@
 .dataContainer ul {
   width: 70%;
   margin: 0 auto;
+  padding-bottom: 20px;
 }
 
 .dataContainer ol {
   width: 70%;
   margin: 0 auto;
+  padding-bottom: 20px;
 }
 
 @media (max-width: 426px) {
